parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    BOOL
    CONST_BOOL
    NOT
    OR

Grammar

Rule 0     S' -> routine0
Rule 1     routine0 -> goto_main_neur ROUTINE ID SEMICOLON global_scope routine1 main0
Rule 2     goto_main_neur -> <empty>
Rule 3     routine1 -> statement routine1
Rule 4     routine1 -> class0 routine1
Rule 5     routine1 -> function0 routine1
Rule 6     routine1 -> declaration0 routine1
Rule 7     routine1 -> assignment0 routine1
Rule 8     routine1 -> empty
Rule 9     global_scope -> <empty>
Rule 10    class0 -> CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
Rule 11    revert_global -> <empty>
Rule 12    revert_scope -> <empty>
Rule 13    id_def -> ID
Rule 14    class_id_def -> ID
Rule 15    class1 -> COLON ID
Rule 16    class1 -> empty
Rule 17    class2 -> attributes
Rule 18    class2 -> empty
Rule 19    class3 -> methods
Rule 20    class3 -> empty
Rule 21    function0 -> DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
Rule 22    endParamNeur -> <empty>
Rule 23    startFuncNeur -> <empty>
Rule 24    function1 -> type
Rule 25    function1 -> VOID
Rule 26    function2 -> simple_declaration function2
Rule 27    function2 -> simple_assignment function2
Rule 28    function2 -> empty
Rule 29    declaration0 -> decl_id_def COLON declaration1 SEMICOLON
Rule 30    decl_id_def -> ID
Rule 31    declaration1 -> type simpleMemoryNeur
Rule 32    declaration1 -> complex_type simpleMemoryNeur
Rule 33    declaration1 -> type isArrayNeur LSQRBRACKET exp0 limitNeur RSQRBRACKET declaration2 neurMemory
Rule 34    limitNeur -> <empty>
Rule 35    simpleMemoryNeur -> <empty>
Rule 36    isArrayNeur -> <empty>
Rule 37    neurMemory -> <empty>
Rule 38    declaration2 -> dim2Neur LSQRBRACKET exp0 limitNeur2 RSQRBRACKET
Rule 39    declaration2 -> empty
Rule 40    dim2Neur -> <empty>
Rule 41    limitNeur2 -> <empty>
Rule 42    assignment0 -> ID EQUALS expression0 SEMICOLON
Rule 43    assignment0 -> assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
Rule 44    assignment0 -> assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
Rule 45    arrAccdim2 -> <empty>
Rule 46    rsqrbracket_assign_2dim1 -> RSQRBRACKET
Rule 47    rsqrbracket_assign -> RSQRBRACKET
Rule 48    lsqrbracket_assign -> LSQRBRACKET
Rule 49    assign_id_def -> ID
Rule 50    arrAccNeur1 -> <empty>
Rule 51    constructor -> CONSTRUCT ID LPAREN params0 RPAREN function_block0
Rule 52    attributes -> data_access simple_declaration attributes
Rule 53    attributes -> simple_assignment attributes
Rule 54    attributes -> empty
Rule 55    methods -> data_access function0 methods
Rule 56    methods -> empty
Rule 57    params0 -> type ID paramsNeur params1
Rule 58    params0 -> empty
Rule 59    paramsNeur -> <empty>
Rule 60    params1 -> COMMA params0
Rule 61    params1 -> empty
Rule 62    function_block0 -> LBRACKET function_block1 RBRACKET
Rule 63    function_block1 -> function_statement function_block1
Rule 64    function_block1 -> empty
Rule 65    type -> INT
Rule 66    type -> FLOAT
Rule 67    type -> STRING
Rule 68    simple_declaration -> decl_id_def COLON type simpleMemoryNeur SEMICOLON
Rule 69    simple_assignment -> ID EQUALS expression0 SEMICOLON
Rule 70    complex_type -> ID
Rule 71    exp0 -> term0 check_last_plus_minus_operator exp1
Rule 72    exp1 -> PLUS push_plus_minus_op exp0
Rule 73    exp1 -> MINUS push_plus_minus_op exp0
Rule 74    exp1 -> empty
Rule 75    push_plus_minus_op -> <empty>
Rule 76    check_last_plus_minus_operator -> <empty>
Rule 77    term0 -> power0 check_last_times_division_operator term1
Rule 78    term1 -> MULTIPLY push_times_division_op term0
Rule 79    term1 -> DIVIDE push_times_division_op term0
Rule 80    term1 -> empty
Rule 81    push_times_division_op -> <empty>
Rule 82    check_last_times_division_operator -> <empty>
Rule 83    power0 -> LPAREN open_paren exp0 RPAREN close_paren check_pow_rad_operator power2
Rule 84    power0 -> const_var check_pow_rad_operator power2
Rule 85    power0 -> function_call check_pow_rad_operator power2
Rule 86    power0 -> method_call0 check_pow_rad_operator power2
Rule 87    power0 -> attr_access0 check_pow_rad_operator power2
Rule 88    power0 -> assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign check_pow_rad_operator power2
Rule 89    power0 -> assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 check_pow_rad_operator power2
Rule 90    open_paren -> <empty>
Rule 91    close_paren -> <empty>
Rule 92    power2 -> POWER push_pow_rad_op power0
Rule 93    power2 -> SQRT push_pow_rad_op power0
Rule 94    power2 -> empty
Rule 95    push_pow_rad_op -> <empty>
Rule 96    check_pow_rad_operator -> <empty>
Rule 97    const_var -> CONST_INT neurInt
Rule 98    const_var -> CONST_FLOAT neurFloat
Rule 99    const_var -> ID neurID
Rule 100   neurID -> <empty>
Rule 101   neurInt -> <empty>
Rule 102   neurFloat -> <empty>
Rule 103   function_call -> id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
Rule 104   neurFuncCall -> <empty>
Rule 105   id_funcCall -> ID
Rule 106   function_call_params0 -> expression0 neurFuncCallParams1 function_call_params1
Rule 107   function_call_params0 -> CONST_STRING neurFuncCallParams1 function_call_params1
Rule 108   function_call_params0 -> empty function_call_params1
Rule 109   neurFuncCallParams1 -> <empty>
Rule 110   function_call_params1 -> COMMA function_call_params0
Rule 111   function_call_params1 -> empty
Rule 112   expression0 -> exp0 expression1
Rule 113   expression0 -> attr_access0 expression1
Rule 114   expression1 -> LTHAN push_rel_op expression3
Rule 115   expression1 -> GTHAN push_rel_op expression3
Rule 116   expression1 -> DIFFERENT push_rel_op expression3
Rule 117   expression1 -> EQUIVALENT push_rel_op expression3
Rule 118   expression1 -> empty
Rule 119   push_rel_op -> <empty>
Rule 120   check_rel_operator -> <empty>
Rule 121   expression3 -> exp0 check_rel_operator
Rule 122   expression3 -> attr_access0
Rule 123   attr_access0 -> ID DOT ID
Rule 124   method_call0 -> ID DOT function_call
Rule 125   data_access -> PRIVATE
Rule 126   data_access -> PUBLIC
Rule 127   function_statement -> simple_assignment
Rule 128   function_statement -> condition0
Rule 129   function_statement -> writing0
Rule 130   function_statement -> reading
Rule 131   function_statement -> return
Rule 132   function_statement -> function_call SEMICOLON
Rule 133   function_statement -> method_call0 SEMICOLON
Rule 134   function_statement -> while
Rule 135   condition0 -> IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
Rule 136   condNeur1 -> <empty>
Rule 137   condNeur3 -> <empty>
Rule 138   condition1 -> ELSE condNeur2 block0
Rule 139   condition1 -> empty
Rule 140   condNeur2 -> <empty>
Rule 141   writing0 -> WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
Rule 142   push_writing_op -> <empty>
Rule 143   push_string_val -> <empty>
Rule 144   writing1 -> expression0 push_writing_val writing2
Rule 145   writing1 -> CONST_STRING push_string_val push_writing_val writing2
Rule 146   push_writing_val -> <empty>
Rule 147   writing2 -> COMMA push_writing_op writing1
Rule 148   writing2 -> empty
Rule 149   reading -> READ ID SEMICOLON
Rule 150   return -> RETURN expression0 SEMICOLON
Rule 151   return -> RETURN SEMICOLON
Rule 152   while -> WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
Rule 153   wNeur1 -> <empty>
Rule 154   wNeur2 -> <empty>
Rule 155   wNeur3 -> <empty>
Rule 156   block0 -> LBRACKET block1 RBRACKET
Rule 157   block1 -> statement block1
Rule 158   block1 -> empty
Rule 159   statement -> assignment0
Rule 160   statement -> object_assignment
Rule 161   statement -> condition0
Rule 162   statement -> writing0
Rule 163   statement -> reading
Rule 164   statement -> return
Rule 165   statement -> function_call SEMICOLON
Rule 166   statement -> method_call0 SEMICOLON
Rule 167   statement -> while
Rule 168   object_assignment -> ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
Rule 169   main0 -> MAIN main_scope LBRACKET main1 RBRACKET
Rule 170   main1 -> declaration0 main1
Rule 171   main1 -> statement main1
Rule 172   main1 -> empty
Rule 173   main_scope -> <empty>
Rule 174   empty -> <empty>

Terminals, with rules where they appear

AND                  : 
ARROW                : 21
BOOL                 : 
CLASS                : 10
COLON                : 15 29 68
COMMA                : 60 110 147
CONSTRUCT            : 51
CONST_BOOL           : 
CONST_FLOAT          : 98
CONST_INT            : 97
CONST_STRING         : 107 145
DEF                  : 21
DIFFERENT            : 116
DIVIDE               : 79
DOT                  : 123 124
ELSE                 : 138
EQUALS               : 42 43 44 69 168
EQUIVALENT           : 117
FLOAT                : 66
GTHAN                : 115
ID                   : 1 13 14 15 30 42 49 51 57 69 70 99 105 123 123 124 149 168 168
IF                   : 135
INT                  : 65
LBRACKET             : 10 62 156 169
LPAREN               : 21 51 83 103 135 141 152 168
LSQRBRACKET          : 21 21 33 38 44 48 89
LTHAN                : 114
MAIN                 : 169
MINUS                : 73
MULTIPLY             : 78
NEW                  : 168
NOT                  : 
OR                   : 
PLUS                 : 72
POWER                : 92
PRIVATE              : 125
PUBLIC               : 126
RBRACKET             : 10 62 156 169
READ                 : 149
RETURN               : 150 151
ROUTINE              : 1
RPAREN               : 21 51 83 103 135 141 152 168
RSQRBRACKET          : 21 21 33 38 44 46 47 89
SEMICOLON            : 1 10 29 42 43 44 68 69 132 133 141 149 150 151 165 166 168
SQRT                 : 93
STRING               : 67
VOID                 : 25
WHILE                : 152
WRITE                : 141
error                : 

Nonterminals, with rules where they appear

arrAccNeur1          : 
arrAccdim2           : 44 89
assign_id_def        : 43 44 88 89
assignment0          : 7 159
attr_access0         : 87 113 122
attributes           : 17 52 53
block0               : 135 138 152
block1               : 156 157
check_last_plus_minus_operator : 71
check_last_times_division_operator : 77
check_pow_rad_operator : 83 84 85 86 87 88 89
check_rel_operator   : 121
class0               : 4
class1               : 10
class2               : 10
class3               : 10
class_id_def         : 10
close_paren          : 83
complex_type         : 32
condNeur1            : 135
condNeur2            : 138
condNeur3            : 135
condition0           : 128 161
condition1           : 135
const_var            : 84
constructor          : 10
data_access          : 52 55
decl_id_def          : 29 68
declaration0         : 6 170
declaration1         : 29
declaration2         : 33
dim2Neur             : 38
empty                : 8 16 18 20 28 39 54 56 58 61 64 74 80 94 108 111 118 139 148 158 172
endParamNeur         : 21
exp0                 : 33 38 43 44 44 72 73 83 88 89 89 112 121
exp1                 : 71
expression0          : 42 43 44 69 106 135 144 150 152
expression1          : 112 113
expression3          : 114 115 116 117
function0            : 5 55
function1            : 21
function2            : 21 26 27
function_block0      : 21 51
function_block1      : 62 63
function_call        : 85 124 132 165
function_call_params0 : 103 110 168
function_call_params1 : 106 107 108
function_statement   : 63
global_scope         : 1
goto_main_neur       : 1
id_def               : 21
id_funcCall          : 103
isArrayNeur          : 33
limitNeur            : 33
limitNeur2           : 38
lsqrbracket_assign   : 43 44 88 89
main0                : 1
main1                : 169 170 171
main_scope           : 169
method_call0         : 86 133 166
methods              : 19 55
neurFloat            : 98
neurFuncCall         : 103
neurFuncCallParams1  : 106 107
neurID               : 99
neurInt              : 97
neurMemory           : 33
object_assignment    : 160
open_paren           : 83
params0              : 21 51 60
params1              : 57
paramsNeur           : 57
power0               : 77 92 93
power2               : 83 84 85 86 87 88 89
push_plus_minus_op   : 72 73
push_pow_rad_op      : 92 93
push_rel_op          : 114 115 116 117
push_string_val      : 145
push_times_division_op : 78 79
push_writing_op      : 141 147
push_writing_val     : 144 145
reading              : 130 163
return               : 131 164
revert_global        : 10
revert_scope         : 21
routine0             : 0
routine1             : 1 3 4 5 6 7
rsqrbracket_assign   : 43 88
rsqrbracket_assign_2dim1 : 44 89
simpleMemoryNeur     : 31 32 68
simple_assignment    : 27 53 127
simple_declaration   : 26 52
startFuncNeur        : 21
statement            : 3 157 171
term0                : 71 78 79
term1                : 77
type                 : 24 31 33 57 68
wNeur1               : 152
wNeur2               : 152
wNeur3               : 152
while                : 134 167
writing0             : 129 162
writing1             : 141 147
writing2             : 144 145

Parsing method: LALR

state 0

    (0) S' -> . routine0
    (1) routine0 -> . goto_main_neur ROUTINE ID SEMICOLON global_scope routine1 main0
    (2) goto_main_neur -> .

    ROUTINE         reduce using rule 2 (goto_main_neur -> .)

    routine0                       shift and go to state 1
    goto_main_neur                 shift and go to state 2

state 1

    (0) S' -> routine0 .



state 2

    (1) routine0 -> goto_main_neur . ROUTINE ID SEMICOLON global_scope routine1 main0

    ROUTINE         shift and go to state 3


state 3

    (1) routine0 -> goto_main_neur ROUTINE . ID SEMICOLON global_scope routine1 main0

    ID              shift and go to state 4


state 4

    (1) routine0 -> goto_main_neur ROUTINE ID . SEMICOLON global_scope routine1 main0

    SEMICOLON       shift and go to state 5


state 5

    (1) routine0 -> goto_main_neur ROUTINE ID SEMICOLON . global_scope routine1 main0
    (9) global_scope -> .

    CLASS           reduce using rule 9 (global_scope -> .)
    DEF             reduce using rule 9 (global_scope -> .)
    ID              reduce using rule 9 (global_scope -> .)
    IF              reduce using rule 9 (global_scope -> .)
    WRITE           reduce using rule 9 (global_scope -> .)
    READ            reduce using rule 9 (global_scope -> .)
    RETURN          reduce using rule 9 (global_scope -> .)
    WHILE           reduce using rule 9 (global_scope -> .)
    MAIN            reduce using rule 9 (global_scope -> .)

    global_scope                   shift and go to state 6

state 6

    (1) routine0 -> goto_main_neur ROUTINE ID SEMICOLON global_scope . routine1 main0
    (3) routine1 -> . statement routine1
    (4) routine1 -> . class0 routine1
    (5) routine1 -> . function0 routine1
    (6) routine1 -> . declaration0 routine1
    (7) routine1 -> . assignment0 routine1
    (8) routine1 -> . empty
    (159) statement -> . assignment0
    (160) statement -> . object_assignment
    (161) statement -> . condition0
    (162) statement -> . writing0
    (163) statement -> . reading
    (164) statement -> . return
    (165) statement -> . function_call SEMICOLON
    (166) statement -> . method_call0 SEMICOLON
    (167) statement -> . while
    (10) class0 -> . CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
    (21) function0 -> . DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
    (29) declaration0 -> . decl_id_def COLON declaration1 SEMICOLON
    (42) assignment0 -> . ID EQUALS expression0 SEMICOLON
    (43) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
    (44) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
    (174) empty -> .
    (168) object_assignment -> . ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (135) condition0 -> . IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
    (141) writing0 -> . WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
    (149) reading -> . READ ID SEMICOLON
    (150) return -> . RETURN expression0 SEMICOLON
    (151) return -> . RETURN SEMICOLON
    (103) function_call -> . id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
    (124) method_call0 -> . ID DOT function_call
    (152) while -> . WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
    (30) decl_id_def -> . ID
    (49) assign_id_def -> . ID
    (105) id_funcCall -> . ID

    CLASS           shift and go to state 23
    DEF             shift and go to state 24
    ID              shift and go to state 7
    MAIN            reduce using rule 174 (empty -> .)
    IF              shift and go to state 27
    WRITE           shift and go to state 28
    READ            shift and go to state 29
    RETURN          shift and go to state 30
    WHILE           shift and go to state 32

    routine1                       shift and go to state 8
    statement                      shift and go to state 9
    class0                         shift and go to state 10
    function0                      shift and go to state 11
    declaration0                   shift and go to state 12
    assignment0                    shift and go to state 13
    empty                          shift and go to state 14
    object_assignment              shift and go to state 15
    condition0                     shift and go to state 16
    writing0                       shift and go to state 17
    reading                        shift and go to state 18
    return                         shift and go to state 19
    function_call                  shift and go to state 20
    method_call0                   shift and go to state 21
    while                          shift and go to state 22
    decl_id_def                    shift and go to state 25
    assign_id_def                  shift and go to state 26
    id_funcCall                    shift and go to state 31

state 7

    (42) assignment0 -> ID . EQUALS expression0 SEMICOLON
    (168) object_assignment -> ID . EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (124) method_call0 -> ID . DOT function_call
    (30) decl_id_def -> ID .
    (49) assign_id_def -> ID .
    (105) id_funcCall -> ID .

    EQUALS          shift and go to state 33
    DOT             shift and go to state 34
    COLON           reduce using rule 30 (decl_id_def -> ID .)
    LSQRBRACKET     reduce using rule 49 (assign_id_def -> ID .)
    LPAREN          reduce using rule 105 (id_funcCall -> ID .)


state 8

    (1) routine0 -> goto_main_neur ROUTINE ID SEMICOLON global_scope routine1 . main0
    (169) main0 -> . MAIN main_scope LBRACKET main1 RBRACKET

    MAIN            shift and go to state 36

    main0                          shift and go to state 35

state 9

    (3) routine1 -> statement . routine1
    (3) routine1 -> . statement routine1
    (4) routine1 -> . class0 routine1
    (5) routine1 -> . function0 routine1
    (6) routine1 -> . declaration0 routine1
    (7) routine1 -> . assignment0 routine1
    (8) routine1 -> . empty
    (159) statement -> . assignment0
    (160) statement -> . object_assignment
    (161) statement -> . condition0
    (162) statement -> . writing0
    (163) statement -> . reading
    (164) statement -> . return
    (165) statement -> . function_call SEMICOLON
    (166) statement -> . method_call0 SEMICOLON
    (167) statement -> . while
    (10) class0 -> . CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
    (21) function0 -> . DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
    (29) declaration0 -> . decl_id_def COLON declaration1 SEMICOLON
    (42) assignment0 -> . ID EQUALS expression0 SEMICOLON
    (43) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
    (44) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
    (174) empty -> .
    (168) object_assignment -> . ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (135) condition0 -> . IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
    (141) writing0 -> . WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
    (149) reading -> . READ ID SEMICOLON
    (150) return -> . RETURN expression0 SEMICOLON
    (151) return -> . RETURN SEMICOLON
    (103) function_call -> . id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
    (124) method_call0 -> . ID DOT function_call
    (152) while -> . WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
    (30) decl_id_def -> . ID
    (49) assign_id_def -> . ID
    (105) id_funcCall -> . ID

    CLASS           shift and go to state 23
    DEF             shift and go to state 24
    ID              shift and go to state 7
    MAIN            reduce using rule 174 (empty -> .)
    IF              shift and go to state 27
    WRITE           shift and go to state 28
    READ            shift and go to state 29
    RETURN          shift and go to state 30
    WHILE           shift and go to state 32

    statement                      shift and go to state 9
    routine1                       shift and go to state 37
    class0                         shift and go to state 10
    function0                      shift and go to state 11
    declaration0                   shift and go to state 12
    assignment0                    shift and go to state 13
    empty                          shift and go to state 14
    object_assignment              shift and go to state 15
    condition0                     shift and go to state 16
    writing0                       shift and go to state 17
    reading                        shift and go to state 18
    return                         shift and go to state 19
    function_call                  shift and go to state 20
    method_call0                   shift and go to state 21
    while                          shift and go to state 22
    decl_id_def                    shift and go to state 25
    assign_id_def                  shift and go to state 26
    id_funcCall                    shift and go to state 31

state 10

    (4) routine1 -> class0 . routine1
    (3) routine1 -> . statement routine1
    (4) routine1 -> . class0 routine1
    (5) routine1 -> . function0 routine1
    (6) routine1 -> . declaration0 routine1
    (7) routine1 -> . assignment0 routine1
    (8) routine1 -> . empty
    (159) statement -> . assignment0
    (160) statement -> . object_assignment
    (161) statement -> . condition0
    (162) statement -> . writing0
    (163) statement -> . reading
    (164) statement -> . return
    (165) statement -> . function_call SEMICOLON
    (166) statement -> . method_call0 SEMICOLON
    (167) statement -> . while
    (10) class0 -> . CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
    (21) function0 -> . DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
    (29) declaration0 -> . decl_id_def COLON declaration1 SEMICOLON
    (42) assignment0 -> . ID EQUALS expression0 SEMICOLON
    (43) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
    (44) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
    (174) empty -> .
    (168) object_assignment -> . ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (135) condition0 -> . IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
    (141) writing0 -> . WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
    (149) reading -> . READ ID SEMICOLON
    (150) return -> . RETURN expression0 SEMICOLON
    (151) return -> . RETURN SEMICOLON
    (103) function_call -> . id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
    (124) method_call0 -> . ID DOT function_call
    (152) while -> . WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
    (30) decl_id_def -> . ID
    (49) assign_id_def -> . ID
    (105) id_funcCall -> . ID

    CLASS           shift and go to state 23
    DEF             shift and go to state 24
    ID              shift and go to state 7
    MAIN            reduce using rule 174 (empty -> .)
    IF              shift and go to state 27
    WRITE           shift and go to state 28
    READ            shift and go to state 29
    RETURN          shift and go to state 30
    WHILE           shift and go to state 32

    class0                         shift and go to state 10
    routine1                       shift and go to state 38
    statement                      shift and go to state 9
    function0                      shift and go to state 11
    declaration0                   shift and go to state 12
    assignment0                    shift and go to state 13
    empty                          shift and go to state 14
    object_assignment              shift and go to state 15
    condition0                     shift and go to state 16
    writing0                       shift and go to state 17
    reading                        shift and go to state 18
    return                         shift and go to state 19
    function_call                  shift and go to state 20
    method_call0                   shift and go to state 21
    while                          shift and go to state 22
    decl_id_def                    shift and go to state 25
    assign_id_def                  shift and go to state 26
    id_funcCall                    shift and go to state 31

state 11

    (5) routine1 -> function0 . routine1
    (3) routine1 -> . statement routine1
    (4) routine1 -> . class0 routine1
    (5) routine1 -> . function0 routine1
    (6) routine1 -> . declaration0 routine1
    (7) routine1 -> . assignment0 routine1
    (8) routine1 -> . empty
    (159) statement -> . assignment0
    (160) statement -> . object_assignment
    (161) statement -> . condition0
    (162) statement -> . writing0
    (163) statement -> . reading
    (164) statement -> . return
    (165) statement -> . function_call SEMICOLON
    (166) statement -> . method_call0 SEMICOLON
    (167) statement -> . while
    (10) class0 -> . CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
    (21) function0 -> . DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
    (29) declaration0 -> . decl_id_def COLON declaration1 SEMICOLON
    (42) assignment0 -> . ID EQUALS expression0 SEMICOLON
    (43) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
    (44) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
    (174) empty -> .
    (168) object_assignment -> . ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (135) condition0 -> . IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
    (141) writing0 -> . WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
    (149) reading -> . READ ID SEMICOLON
    (150) return -> . RETURN expression0 SEMICOLON
    (151) return -> . RETURN SEMICOLON
    (103) function_call -> . id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
    (124) method_call0 -> . ID DOT function_call
    (152) while -> . WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
    (30) decl_id_def -> . ID
    (49) assign_id_def -> . ID
    (105) id_funcCall -> . ID

    CLASS           shift and go to state 23
    DEF             shift and go to state 24
    ID              shift and go to state 7
    MAIN            reduce using rule 174 (empty -> .)
    IF              shift and go to state 27
    WRITE           shift and go to state 28
    READ            shift and go to state 29
    RETURN          shift and go to state 30
    WHILE           shift and go to state 32

    function0                      shift and go to state 11
    routine1                       shift and go to state 39
    statement                      shift and go to state 9
    class0                         shift and go to state 10
    declaration0                   shift and go to state 12
    assignment0                    shift and go to state 13
    empty                          shift and go to state 14
    object_assignment              shift and go to state 15
    condition0                     shift and go to state 16
    writing0                       shift and go to state 17
    reading                        shift and go to state 18
    return                         shift and go to state 19
    function_call                  shift and go to state 20
    method_call0                   shift and go to state 21
    while                          shift and go to state 22
    decl_id_def                    shift and go to state 25
    assign_id_def                  shift and go to state 26
    id_funcCall                    shift and go to state 31

state 12

    (6) routine1 -> declaration0 . routine1
    (3) routine1 -> . statement routine1
    (4) routine1 -> . class0 routine1
    (5) routine1 -> . function0 routine1
    (6) routine1 -> . declaration0 routine1
    (7) routine1 -> . assignment0 routine1
    (8) routine1 -> . empty
    (159) statement -> . assignment0
    (160) statement -> . object_assignment
    (161) statement -> . condition0
    (162) statement -> . writing0
    (163) statement -> . reading
    (164) statement -> . return
    (165) statement -> . function_call SEMICOLON
    (166) statement -> . method_call0 SEMICOLON
    (167) statement -> . while
    (10) class0 -> . CLASS class_id_def class1 LBRACKET class2 constructor class3 RBRACKET SEMICOLON revert_global
    (21) function0 -> . DEF id_def LPAREN params0 RPAREN endParamNeur ARROW function1 LSQRBRACKET LSQRBRACKET function2 RSQRBRACKET RSQRBRACKET startFuncNeur function_block0 revert_scope
    (29) declaration0 -> . decl_id_def COLON declaration1 SEMICOLON
    (42) assignment0 -> . ID EQUALS expression0 SEMICOLON
    (43) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign EQUALS expression0 SEMICOLON
    (44) assignment0 -> . assign_id_def lsqrbracket_assign exp0 rsqrbracket_assign_2dim1 LSQRBRACKET exp0 RSQRBRACKET arrAccdim2 EQUALS expression0 SEMICOLON
    (174) empty -> .
    (168) object_assignment -> . ID EQUALS NEW ID LPAREN function_call_params0 RPAREN SEMICOLON
    (135) condition0 -> . IF LPAREN expression0 condNeur1 RPAREN block0 condition1 condNeur3
    (141) writing0 -> . WRITE push_writing_op LPAREN writing1 RPAREN SEMICOLON
    (149) reading -> . READ ID SEMICOLON
    (150) return -> . RETURN expression0 SEMICOLON
    (151) return -> . RETURN SEMICOLON
    (103) function_call -> . id_funcCall LPAREN neurFuncCall function_call_params0 RPAREN
    (124) method_call0 -> . ID DOT function_call
    (152) while -> . WHILE wNeur1 LPAREN expression0 RPAREN wNeur2 block0 wNeur3
    (30) decl_id_def -> . ID
    (49) assign_id_def -> . ID
    (105) id_funcCall -> . ID

    CLASS           shift and go to state 23
    DEF             shift and go to state 24
    ID              shift and go to state 7
    MAIN            reduce using rule 174 (empty -> .)
    IF              shift and go to state 27
    WRITE           shift and go to state 28
    READ            shift and go to state 29
    RETURN          shift and go to state 30
    WHILE           shift and go to state 32

    declaration0                   shift and go to state 12
    routine1                       shift and go to state 40
    statement                      shift and go to state 9
    class0                         shift and go to state 10
    function0                      shift and go to state 11
    assignment0                    shift and go to state 13
    empty                          shift and go to state 14
    object_assignment              shift and go to state 15
    condition0                     shift and go to state 16
    writing0                       shift and go to state 17
    reading                        shift and go to state 18
    return                         shift and go to state 19
    function_call                  shift and go to state 20
    method_call0                   shift and go to state 21
    while                          shift and go to state 22
    decl_id_def                    shift and go to state 25
    assign_id_def                  shift and go to state 26
    id_funcCall                    shift and go to state 31

state 13
